Fix header on Safari 2

--- a/scss/site/_dukung.scss
+++ b/scss/site/_dukung.scss
@@ -8,7 +8,7 @@
 	// background-position: 50% 35%;
 	// background-color: $white-bg;
 	
-	height: 640px;	
+	height: 720px;	
 
 	// min-height: calc(100vh - 200px);
 
